force-app/main/default/objects/Financial_Account_Snapshot__c/Financial_Account_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Financial Account Snapshot</label>
    <nameField>
        <displayFormat>FAS-{0000000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>