force-app/main/default/objects/Financial_Account_Snapshot__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <label>Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>