force-app/main/default/objects/Financial_Account_Snapshot__c/fields/Deposit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Balance__c</fullName>
    <label>Deposit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>