force-app/main/default/objects/Financial_Account_Snapshot__c/fields/Line_Usage__c.field-meta.xml
<CustomField>
    <fullName>Line_Usage__c</fullName>
    <formula>IF(Commitment__c &gt; 0,Principal_Balance__c /  Commitment__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>