force-app/main/default/objects/Financial_Account_Snapshot__c/fields/Loan_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Loan_Exposure__c</fullName>
    <label>Loan Exposure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>