force-app/main/default/objects/Financial_Account_Snapshot__c/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Rating</label>
    <length>6</length>
    <type>Text</type>
</CustomField>